--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,7 @@
   --font-suhayb: "Suhayb", "Lateef", sans-serif;
 }
 
+/* style سەردێرەکان */
 @keyframes marquee {
   100% {
     transform: translateX(100%);
@@ -18,4 +19,20 @@
   0% {
     transform: translateX(-100%);
   }
+}
+
+/* style search */
+@keyframes fade {
+  from {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade {
+  animation: fade 0.2s ease-out;
 }
