--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 @font-face {
   font-family: "Suhayb";
   src: url("./assets/fonts/rudawregular2.ttf") format("truetype");
